# OpenedX

./: README.md
a/: .env  .env for gmail
a/course-discovery/: package-lock.json
a/my2_app/: LICENSE  setup.cfg  setup.py
a/my2_app/mydemo/yagnesh_demo.egg-info/: PKG-INFO  SOURCES.txt
a/my_app/: setup.cfg  setup.py
a/my_app/demo_plug/: apps.py  urls.py  views.py
a/my_app/demo_plug/demo_plug.egg-info/: PKG-INFO  SOURCES.txt
