[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = yagnesh
author_email = yagneshnayi7@gmail.com
description = my OpenedX
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mydemo
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mydemo
