[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = yagnesh
author_email = yagneshnayi07@gmail.com
description = my OpenedX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = demo_plug
packages = find:
python_requires = >=3.6

[options.packages.find]
where = demo_plug